--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   ========================== -->
   <link rel="preload" href="assets/css/main.css" as="style" />
   <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/problem.css" />
 
   <!-- =========================
        Structured Data (JSON-LD)
@@ -146,10 +147,7 @@
 
 
     <!-- =========================
-         HERO (OPTIMIZED DESKTOP UX)
-         - One primary CTA (left)
-         - Right card = VIP Proof Card (supporting, not competing)
-         - No “Volcano House”
+         HERO
     ========================= -->
     <section class="hero" aria-label="Hero">
       <div class="hero-media" aria-hidden="true">
@@ -234,46 +232,65 @@
     </section>
 
 
-    <!-- =========================
-         Social Proof / Credibility
-    ========================== -->
-    <section class="proof" id="results" aria-label="Social proof">
-      <div class="container">
-        <header class="section-header">
-          <h2>Built for real-world results</h2>
-          <p>
-            This isn’t theory. It’s structure + execution + feedback — in an environment designed for rapid growth.
-          </p>
-        </header>
+<section class="problem-simple" id="problem" aria-label="Problem">
+  <div class="problem-simple__inner">
+    <h2 class="problem-simple__title">
+      The real problem isn’t that you <em>don’t know what to say</em>.
+    </h2>
 
-        <div class="proof-grid">
-          <article class="proof-item">
-            <h3>Coaching loops</h3>
-            <p>Daily briefs, drills, live execution, debriefs — so your learning compounds fast.</p>
-          </article>
+    <p class="problem-simple__lede">
+      It’s that you’ve never trained in the right <span class="gold">environment</span> — where
+      beautiful women, elite venues, and social momentum are part of daily life.
+    </p>
 
-          <article class="proof-item">
-            <h3>High-quality base</h3>
-            <p>Medellín: premium comfort, security standards, and the right social atmosphere.</p>
-          </article>
+    <!-- simple media row (swap images whenever) -->
+    <div class="problem-simple__media" aria-label="Photos">
+      <figure>
+        <img src="assets/images/problem/yoshi-colombiamoda.jpg" alt="Approaching at Colombiamoda in Medellín" loading="lazy">
+        <figcaption>High-energy social environments (Colombiamoda).</figcaption>
+      </figure>
 
-          <article class="proof-item">
-            <h3>Social circle focus</h3>
-            <p>Not just approaches: build networks, calibrate, and learn how high-level social ecosystems work.</p>
-          </article>
+      <figure>
+        <img src="assets/images/problem/party-nightgame.jpg" alt="Nightlife venues with beautiful women in Medellín" loading="lazy">
+        <figcaption>Nightgame, elite venues, and beautiful women.</figcaption>
+      </figure>
+    </div>
 
-          <article class="proof-item">
-            <h3>Transformation-first</h3>
-            <p>Confidence, communication, presence, fitness, discipline — you leave with a different identity.</p>
-          </article>
-        </div>
+    <h3 class="problem-simple__h3">What’s actually holding you back</h3>
 
-        <div class="section-cta">
-          <a class="btn btn-primary" href="#apply">Apply Now</a>
-          <a class="btn btn-secondary" href="#gallery">See Media</a>
-        </div>
-      </div>
-    </section>
+    <p class="problem-simple__p">
+      Many guys want to get better with women — but they don’t even go out consistently.
+      The idea of approaching makes them tense. They overthink. They hesitate. And they end up stuck in the same loop.
+    </p>
+
+    <ul class="problem-simple__list">
+      <li><strong>Nerves:</strong> you feel the pressure before the approach.</li>
+      <li><strong>Low exposure:</strong> not enough real opportunities with attractive women.</li>
+      <li><strong>Weak venues:</strong> places that don’t support social momentum.</li>
+      <li><strong>No lifestyle shift:</strong> you go back home and everything resets.</li>
+    </ul>
+
+    <h3 class="problem-simple__h3">Why Medellín solves it</h3>
+
+    <p class="problem-simple__p">
+      This immersion removes you from your old routine and drops you into a higher standard:
+      a <span class="gold">VIP mansion in El Poblado</span>, elite social venues, daygame + nightgame —
+      surrounded by momentum and <span class="underline">beautiful women</span>.
+    </p>
+
+    <p class="problem-simple__p">
+      You don’t return home with “tips”. You return as a changed man — calmer, sharper, socially confident —
+      with real experience in <span class="gold">daygame</span>, <span class="gold">nightgame</span>, and elite venues.
+    </p>
+
+    <div class="problem-simple__cta">
+      <a class="btn btn-primary" href="#apply">Apply Now</a>
+      <a class="problem-simple__link" href="#apply">Start application →</a>
+    </div>
+  </div>
+</section>
+
+
 
     <!-- =========================
          Program Overview
