--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <link rel="preload" href="assets/css/main.css" as="style" />
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="assets/css/problem.css" />
+  <link rel="stylesheet" href="assets/css/program.css" />
 
   <!-- =========================
        Structured Data (JSON-LD)
@@ -232,137 +233,183 @@
     </section>
 
 
-<section class="problem-simple" id="problem" aria-label="Problem">
-  <div class="problem-simple__inner">
-    <h2 class="problem-simple__title">
-      The real problem isn’t that you <em>don’t know what to say</em>.
-    </h2>
+    <section class="problem-simple" id="problem" aria-label="Problem">
+      <div class="problem-simple__inner">
+        <h2 class="problem-simple__title">
+          The real problem isn’t that you <em>don’t know what to say</em>.
+        </h2>
 
-    <p class="problem-simple__lede">
-      It’s that you’ve never trained in the right <span class="gold">environment</span> — where
-      beautiful women, elite venues, and social momentum are part of daily life.
-    </p>
+        <p class="problem-simple__lede">
+          It’s that you’ve never trained in the right <span class="gold">environment</span> — where
+          beautiful women, elite venues, and social momentum are part of daily life.
+        </p>
 
-    <!-- simple media row (swap images whenever) -->
-    <div class="problem-simple__media" aria-label="Photos">
-      <figure>
-        <img src="assets/images/problem/yoshi-colombiamoda.jpg" alt="Approaching at Colombiamoda in Medellín" loading="lazy">
-        <figcaption>High-energy social environments (Colombiamoda).</figcaption>
-      </figure>
+        <!-- simple media row (swap images whenever) -->
+        <div class="problem-simple__media" aria-label="Photos">
+          <figure>
+            <img src="assets/images/problem/yoshi-colombiamoda.jpg" alt="Approaching at Colombiamoda in Medellín" loading="lazy">
+            <figcaption>High-energy social environments (Colombiamoda).</figcaption>
+          </figure>
 
-      <figure>
-        <img src="assets/images/problem/party-nightgame.jpg" alt="Nightlife venues with beautiful women in Medellín" loading="lazy">
-        <figcaption>Nightgame, elite venues, and beautiful women.</figcaption>
-      </figure>
-    </div>
+          <figure>
+            <img src="assets/images/problem/party-nightgame.jpg" alt="Nightlife venues with beautiful women in Medellín" loading="lazy">
+            <figcaption>Nightgame, elite venues, and beautiful women.</figcaption>
+          </figure>
+        </div>
 
-    <h3 class="problem-simple__h3">What’s actually holding you back</h3>
+        <h3 class="problem-simple__h3">What’s actually holding you back</h3>
 
-    <p class="problem-simple__p">
-      Many guys want to get better with women — but they don’t even go out consistently.
-      The idea of approaching makes them tense. They overthink. They hesitate. And they end up stuck in the same loop.
-    </p>
+        <p class="problem-simple__p">
+          Many guys want to get better with women — but they don’t even go out consistently.
+          The idea of approaching makes them tense. They overthink. They hesitate. And they end up stuck in the same loop.
+        </p>
 
-    <ul class="problem-simple__list">
-      <li><strong>Nerves:</strong> you feel the pressure before the approach.</li>
-      <li><strong>Low exposure:</strong> not enough real opportunities with attractive women.</li>
-      <li><strong>Weak venues:</strong> places that don’t support social momentum.</li>
-      <li><strong>No lifestyle shift:</strong> you go back home and everything resets.</li>
-    </ul>
+        <ul class="problem-simple__list">
+          <li><strong>Nerves:</strong> you feel the pressure before the approach.</li>
+          <li><strong>Low exposure:</strong> not enough real opportunities with attractive women.</li>
+          <li><strong>Weak venues:</strong> places that don’t support social momentum.</li>
+          <li><strong>No lifestyle shift:</strong> you go back home and everything resets.</li>
+        </ul>
 
-    <h3 class="problem-simple__h3">Why Medellín solves it</h3>
+        <h3 class="problem-simple__h3">Why Medellín solves it</h3>
 
-    <p class="problem-simple__p">
-      This immersion removes you from your old routine and drops you into a higher standard:
-      a <span class="gold">VIP mansion in El Poblado</span>, elite social venues, daygame + nightgame —
-      surrounded by momentum and <span class="underline">beautiful women</span>.
-    </p>
+        <p class="problem-simple__p">
+          This immersion removes you from your old routine and drops you into a higher standard:
+          a <span class="gold">VIP mansion in El Poblado</span>, elite social venues, daygame + nightgame —
+          surrounded by momentum and <span class="underline">beautiful women</span>.
+        </p>
 
-    <p class="problem-simple__p">
-      You don’t return home with “tips”. You return as a changed man — calmer, sharper, socially confident —
-      with real experience in <span class="gold">daygame</span>, <span class="gold">nightgame</span>, and elite venues.
-    </p>
+        <p class="problem-simple__p">
+          You don’t return home with “tips”. You return as a changed man — calmer, sharper, socially confident —
+          with real experience in <span class="gold">daygame</span>, <span class="gold">nightgame</span>, and elite venues.
+        </p>
 
-    <div class="problem-simple__cta">
-      <a class="btn btn-primary" href="#apply">Apply Now</a>
-      <a class="problem-simple__link" href="#apply">Start application →</a>
-    </div>
-  </div>
-</section>
+        <div class="problem-simple__cta">
+          <a class="btn btn-primary" href="#apply">Apply Now</a>
+          <a class="problem-simple__link" href="#apply">Start application →</a>
+        </div>
+      </div>
+    </section>
 
 
 
-    <!-- =========================
-         Program Overview
-    ========================== -->
     <section class="program" id="program" aria-label="Program overview">
       <div class="container">
         <header class="section-header">
-          <h2>The Program</h2>
+          <h2>The Medellín Immersion Program</h2>
           <p>
-            A complete social training system: <strong>daygame, nightgame, social circle, online game</strong> + fitness and lifestyle.
+            This is our flagship experience: <span class="gold"><strong>daygame + nightgame + social circle + online game</strong></span>,
+            built inside a <span class="underline"><em>VIP lifestyle</em></span> — mansion base, elite venues, premium guidance, and high standards.
           </p>
         </header>
 
         <div class="program-grid">
           <article class="program-card">
-            <h3>Daygame (Field Training)</h3>
-            <p>Warm-ups, drills, execution blocks, calibrated feedback. Learn to act without hesitation.</p>
-            <ul class="bullets">
-              <li>Approach mechanics + momentum</li>
-              <li>Conversation structure + vibe</li>
-              <li>Logistics + decision-making</li>
-            </ul>
+            <div class="program-media">
+              <img src="assets/images/program/daygame.jpg" alt="Daygame field training in Medellín" loading="lazy">
+            </div>
+            <div class="program-content">
+              <h3>Daygame Dominance</h3>
+              <p>
+                You build real approach confidence in the streets, malls, cafés, and high-traffic zones —
+                with a structured execution loop and direct calibration so you stop hesitating.
+              </p>
+              <ul class="bullets">
+                <li><span class="underline">Approach mechanics</span> + momentum</li>
+                <li>Conversation leadership + <span class="gold">attraction</span></li>
+                <li>Logistics, pulls, and <span class="underline">decision-making</span></li>
+              </ul>
+            </div>
           </article>
 
           <article class="program-card">
-            <h3>Nightgame (High-Energy Social)</h3>
-            <p>Calibrate in faster, more social environments — with guidance on presence and leadership.</p>
-            <ul class="bullets">
-              <li>Group dynamics</li>
-              <li>Venue navigation</li>
-              <li>Frame control + composure</li>
-            </ul>
+            <div class="program-media">
+              <img src="assets/images/program/nightgame.jpg" alt="Nightgame in elite venues with beautiful women in Medellín" loading="lazy">
+            </div>
+            <div class="program-content">
+              <h3>Nightgame & Elite Venues</h3>
+              <p>
+                Train in Medellín’s <u>most exclusive nightlife</u> — where social dynamics move fast.
+                You’ll learn presence, leadership, and composure while surrounded by <span class="gold"><em>beautiful women</em></span>.
+              </p>
+              <ul class="bullets">
+                <li>Group dynamics + social intelligence</li>
+                <li><span class="underline">Venue navigation</span> (elite spots + logistics)</li>
+                <li><span class="gold">Frame control</span> + masculine composure</li>
+              </ul>
+            </div>
           </article>
 
           <article class="program-card">
-            <h3>Social Circle (High-Leverage)</h3>
-            <p>Build access through lifestyle and networks — so your results aren’t dependent on cold approaches.</p>
-            <ul class="bullets">
-              <li>Positioning + status signals</li>
-              <li>Invites + hosting</li>
-              <li>Network building habits</li>
-            </ul>
+            <div class="program-media">
+              <img src="assets/images/program/social-circle.jpg" alt="Social circle and high-leverage networking in Medellín" loading="lazy">
+            </div>
+            <div class="program-content">
+              <h3>Social Circle & Access</h3>
+              <p>
+                Cold approach is power — but social circle is leverage.
+                We teach you how to build access, invitations, and momentum so you’re not dependent on randomness.
+              </p>
+              <ul class="bullets">
+                <li><span class="gold">Positioning</span> + status signals</li>
+                <li>Invites, hosting, and social momentum</li>
+                <li><span class="underline">Network building</span> habits that compound</li>
+              </ul>
+            </div>
           </article>
 
           <article class="program-card">
-            <h3>Online Game (Modern Leverage)</h3>
-            <p>Message strategy, profile optimization, and bridging online-to-offline smoothly.</p>
-            <ul class="bullets">
-              <li>Profile & photos (structure)</li>
-              <li>DM flows that convert</li>
-              <li>Dates logistics</li>
-            </ul>
+            <div class="program-media">
+              <img src="assets/images/program/online-game.jpg" alt="Online game: profile optimization and messaging strategy" loading="lazy">
+            </div>
+            <div class="program-content">
+              <h3>Online Game That Converts</h3>
+              <p>
+                A premium profile, the right photos, and message flows that move women from DM to real-life smoothly —
+                so you create options before you even step outside.
+              </p>
+              <ul class="bullets">
+                <li><span class="underline">Profile strategy</span> + photo structure</li>
+                <li><span class="gold">DM flows</span> that convert</li>
+                <li>Dates, logistics, and <span class="underline">bridging</span> online-to-offline</li>
+              </ul>
+            </div>
           </article>
 
           <article class="program-card">
-            <h3>Fitness & Presence</h3>
-            <p>Training basics that amplify confidence and masculine presence — without losing focus.</p>
-            <ul class="bullets">
-              <li>Simple plan during immersion</li>
-              <li>Body language + posture</li>
-              <li>Energy management</li>
-            </ul>
+            <div class="program-media">
+              <img src="assets/images/program/fitness-presence.jpg" alt="Fitness and masculine presence coaching during immersion" loading="lazy">
+            </div>
+            <div class="program-content">
+              <h3>Fitness, Presence & Masculine Edge</h3>
+              <p>
+                You’ll get premium guidance to upgrade your physique, posture, voice, and body language —
+                the fundamentals that make women feel you before you speak.
+              </p>
+              <ul class="bullets">
+                <li><span class="gold">Elite routine</span> during immersion (energy + recovery)</li>
+                <li>Body language, posture, voice, and presence</li>
+                <li><span class="underline">Performance habits</span> that carry home</li>
+              </ul>
+            </div>
           </article>
 
           <article class="program-card">
-            <h3>Lifestyle (High Standards)</h3>
-            <p>Style, grooming, voice, and environment design — the details that change how people respond to you.</p>
-            <ul class="bullets">
-              <li>Style guidance</li>
-              <li>Social etiquette</li>
-              <li>Discipline protocols</li>
-            </ul>
+            <div class="program-media">
+              <img src="assets/images/program/lifestyle.jpg" alt="VIP lifestyle: style, grooming, photoshoot and high standards" loading="lazy">
+            </div>
+            <div class="program-content">
+              <h3>VIP Lifestyle, Style & Photoshoot</h3>
+              <p>
+                This is where the lifestyle becomes real: style upgrade, grooming, etiquette, and a premium photoshoot —
+                so your identity, presence, and online profile match the new standard.
+              </p>
+              <ul class="bullets">
+                <li><span class="gold">VIP mansion</span> base + high-standard lifestyle</li>
+                <li>Style, grooming, and social etiquette</li>
+                <li>Premium <span class="underline">photoshoot</span> for your dating profile</li>
+              </ul>
+            </div>
           </article>
         </div>
 
@@ -372,6 +419,8 @@
         </div>
       </div>
     </section>
+
+
 
     <!-- =========================
          The Experience (What’s Included / Not Included)
